--- a/package.json
+++ b/package.json
@@ -9,14 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.441.0",
+    "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.11"
+    "react-type-animation": "^3.2.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.11"
-  }
+    "eslint-config-next": "14.2.11",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
+  },
+  "description": "Simple Receipe App using Next JS",
+  "main": "tailwind.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Lakshy-a/Receipe_App.git"
+  },
+  "keywords": [
+    "receipe_app"
+  ],
+  "author": "Lakshya_Gupta",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Lakshy-a/Receipe_App/issues"
+  },
+  "homepage": "https://github.com/Lakshy-a/Receipe_App#readme"
 }
